[package]
name = "gsettings-macro"
version = "0.1.4"
description = "Macro for easy GSettings key access "
homepage = "https://github.com/SeaDve/gsettings-macro"
repository = "https://github.com/SeaDve/gsettings-macro"
documentation = "https://docs.rs/gsettings-macro"
authors = ["Dave Patrick"]
keywords = ["gtk", "gio", "glib", "settings", "macro"]
categories = ["api-bindings"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["/.github/*", "/examples/*"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.57"
heck = "0.4.0"
proc-macro2 = "1.0.38"
proc-macro-error = "1.0.4"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
syn = "1.0.92"

[dev-dependencies]
gio = { version = "0.15.11", features = ["v2_60"] }
