[package]
name = "gsettings-macro"
version = "0.1.11"
description = "Macro for typesafe GSettings key access "
homepage = "https://github.com/SeaDve/gsettings-macro"
repository = "https://github.com/SeaDve/gsettings-macro"
documentation = "https://docs.rs/gsettings-macro"
authors = ["Dave Patrick"]
keywords = ["gtk", "gio", "glib", "settings", "macro"]
categories = ["api-bindings"]
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
exclude = ["/.github/*", "/tests/*"]

[lib]
proc-macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.23", features = ["serialize"] }
syn = "1.0"

[dev-dependencies]
gio = "0.15"
serial_test = "0.9"
