[package]
name = "gsettings-macro"
version = "0.2.1"
description = "Macro for typesafe GSettings key access"
homepage = "https://github.com/SeaDve/gsettings-macro"
repository = "https://github.com/SeaDve/gsettings-macro"
documentation = "https://docs.rs/gsettings-macro"
authors = ["Dave Patrick Caberto"]
categories = ["api-bindings"]
keywords = ["gtk", "gio", "glib", "settings", "macro"]
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
exclude = ["/.github/*", "/tests/*"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
syn = "2.0"
deluxe = "0.5"

[dev-dependencies]
gio = "0.20"
serial_test = "3.2"
